; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_flac.c_flac_decoder_internal_reset.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_flac.c_flac_decoder_internal_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@flac_decoder_read_callback_static = common dso_local global i32 0, align 4
@flac_decoder_tell_callback_static = common dso_local global i32 0, align 4
@flac_decoder_write_callback_static = common dso_local global i32 0, align 4
@flac_decoder_metadata_callback_static = common dso_local global i32 0, align 4
@flac_decoder_error_callback_static = common dso_local global i32 0, align 4
@FLAC__STREAM_DECODER_INIT_STATUS_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @flac_decoder_internal_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flac_decoder_internal_reset(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  store i64 0, i64* %5, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = call i64 @FLAC__stream_decoder_init_stream(i32 %8, i32* @flac_decoder_read_callback_static, i32* null, i32* @flac_decoder_tell_callback_static, i32* null, i32* null, i32* @flac_decoder_write_callback_static, i32* @flac_decoder_metadata_callback_static, i32* @flac_decoder_error_callback_static, %struct.TYPE_4__* %9)
  %11 = load i64, i64* @FLAC__STREAM_DECODER_INIT_STATUS_OK, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @FLAC__stream_decoder_process_until_end_of_metadata(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %14, %13
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @FLAC__stream_decoder_init_stream(i32, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @FLAC__stream_decoder_process_until_end_of_metadata(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
